@@ -94,35 +94,6 @@ class StorefrontIntegration {
 	}
 
 	/**
-	 * Generates the switcher widget markup.
-	 *
-	 * @return string The widget markup.
-	 */
-	public function switcher_widget_markup(): string {
-		/**
-		 * The spl_object_hash function is used here due to we register the widget with an instance of the widget and
-		 * not the class name of the widget. WordPress core takes the instance and passes it through spl_object_hash
-		 * to get a hash and adds that as the widget's name in the $wp_widget_factory->widgets[] array. In order to
-		 * call the_widget, you need to have the name of the widget, so we get the instance and hash to use.
-		 */
-		ob_start();
-		the_widget(
-			spl_object_hash( $this->multi_currency->get_currency_switcher_widget() ),
-			null,
-			apply_filters(
-				$this->id . '_storefront_widget_args',
-				[
-					'before_widget' => '<div id="woocommerce-payments-multi-currency-storefront-widget" class="woocommerce-breadcrumb">',
-					'after_widget'  => '</div>',
-				]
-			)
-		);
-		return ob_get_clean();
-	}
-
-
-
-	/**
 	 * This modifies the breadcrumb defaults for us to be able to place the widget.
 	 *
 	 * @param array $defaults The defaults breadcrumb properties.
@@ -130,11 +101,21 @@ class StorefrontIntegration {
 	 * @return array The modified defaults properties.
 	 */
 	public function modify_breadcrumb_defaults( array $defaults ): array {
+		// Set the instance and args arrays for the widget.
+		$instance = apply_filters( $this->id . '_storefront_widget_instance', [] );
+		$args     = apply_filters(
+			$this->id . '_storefront_widget_args',
+			[
+				'before_widget' => '<div id="woocommerce-payments-multi-currency-storefront-widget" class="woocommerce-breadcrumb">',
+				'after_widget'  => '</div>',
+			]
+		);
+
 		/**
-		 * Some storefront child themes uses different wrappers and styles. We need to place the widget before
+		 * Some storefront child themes use different wrappers and styles. We need to place the widget before
 		 * the <nav> to display it properly.
 		 */
-		$defaults['wrap_before'] = str_replace( '<nav', $this->switcher_widget_markup() . '<nav', $defaults['wrap_before'] );
+		$defaults['wrap_before'] = str_replace( '<nav', $this->multi_currency->get_switcher_widget_markup( $instance, $args ) . '<nav', $defaults['wrap_before'] );
 
 		return $defaults;
 	}
