@@ -26,3 +26,15 @@ register_deactivation_hook( WCPAY_PLUGIN_FILE, 'wcpay_multi_currency_deactivated
 function wcpay_multi_currency_deactivated() {
 	WCPay\MultiCurrency\MultiCurrency::remove_woo_admin_notes();
 }
+
+/**
+ * Gets the switcher widget markup.
+ *
+ * @param array $instance The widget's instance settings.
+ * @param array $args     The widget's arguments.
+ *
+ * @return string The widget markup.
+ */
+function get_wcpay_multi_currency_widget_markup( array $instance = [], array $args = [] ): string {
+	return WC_Payments_Multi_Currency()->switcher_widget_markup( $instance, $args );
+}
